Grace/tests/gibbs/errors/t096.grace
// ERROR = P1005
var numPokemon = 151
